Create python client server skeleton
